; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_string_s.c_gmtime_s.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_string_s.c_gmtime_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gmtime_s(%struct.tm* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tm*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.tm*, align 8
  store %struct.tm* %0, %struct.tm** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call %struct.tm* @gmtime(i32* %7)
  store %struct.tm* %8, %struct.tm** %6, align 8
  %9 = load %struct.tm*, %struct.tm** %6, align 8
  %10 = icmp eq %struct.tm* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load %struct.tm*, %struct.tm** %4, align 8
  %13 = call i32 @memset(%struct.tm* %12, i32 0, i32 4)
  store i32 -1, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.tm*, %struct.tm** %4, align 8
  %16 = load %struct.tm*, %struct.tm** %6, align 8
  %17 = call i32 @memcpy(%struct.tm* %15, %struct.tm* %16, i32 4)
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %11
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local %struct.tm* @gmtime(i32*) #1

declare dso_local i32 @memset(%struct.tm*, i32, i32) #1

declare dso_local i32 @memcpy(%struct.tm*, %struct.tm*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
